[package]
name = "Youtube_sub_control_be_Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
oauth2 = "4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing-subscriber = "0.3"
dotenvy = "0.15"